--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/genai": "^1.12.0",
+    "@types/react-window": "^1.8.8",
+    "marked": "^16.1.1",
+    "mermaid": "^11.9.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "@google/genai": "^1.12.0",
-    "marked": "^16.1.1",
-    "mermaid": "^11.9.0"
+    "react-virtualized-auto-sizer": "^1.0.26",
+    "react-window": "^1.8.11"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
