--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
+    "@vitejs/plugin-legacy": "^6.1.1",
+    "core-js": "^3.45.1",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
