--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@vitejs/plugin-legacy": "^6.1.1",
+    "autoprefixer": "^10.4.21",
     "core-js": "^3.45.1",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
